# axum-hyper-juniper-demo

./: Cargo.toml
public/ws/: script.js
src/: graphql.rs  lib.rs  main.rs  misc.rs
src/graphql/: schema.rs
src/howto/: __1.rs  __2.rs
