[package]
name = "axum-ex1"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies.axum]
path = "../axum"
features = [ "ws", "headers" ]
#version = "0.1.1"

[dependencies]
futures = "0.3"
tokio = { version = "1.6", features = ["macros", "time", "rt", "rt-multi-thread"] }
sqlx = { version="0.5", features=["runtime-tokio-rustls", "tls", "postgres", "macros", "migrate", "uuid", "chrono", "time"]}
#tokio-postgres = "0.7"
#bb8-postgres = "0.7"
#bb8 = "0.7"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.2"
dotenv = "0.15"
juniper = "0.15"
juniper_hyper = "0.8"
bytes = "1"
http-body = "0.4.2"
serde_json = "1.0.66"
tower-layer = "0.3"
tower-service = "0.3.1"
#askama = "0.10"

[dependencies.tower]
version = "0.4"
features = [
    "util",
    "timeout",
    "limit",
    "load-shed",
    "steer",
    "filter",
]
[dependencies.tower-http]
version = "0.1"
features = ["full"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "juniper_hyper"
]
